@@ -2,6 +2,7 @@ Changes between 1.1.2 and 1.1.1
 =====================================
 
 - fix assert reinterpreation that sees a call containing "keyword=..."
+- skip some install-tests if no execnet is available
 
 Changes between 1.1.1 and 1.1.0
 =====================================
